--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(exclude: '*.bak', dir: 'libs')
+    implementation fileTree(exclude: '*.bak', dir: 'libs')
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    compile files('libs/bdasr_V3_20171108_9800a2a.jar')
-    compile files('libs/com.baidu.tts_2.3.1.20170808_e39ea89.jar')
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation files('libs/bdasr_V3_20171108_9800a2a.jar')
+    implementation files('libs/com.baidu.tts_2.3.1.20170808_e39ea89.jar')
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
